lz4_compressor was added in tests/makefile.am

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,55 +1,63 @@
 ## Process this file with automake to produce Makefile.in
 
-check_PROGRAMS = set_forward_list_test \
-                 set_generate_terms_test \
-                 set_geo_test \
-                 set_hash_test \
-                 set_htm_test \
-                 set_lru_test \
-                 set_msgpack_test \
-                 set_patcher_test \
-                 set_query_test \
-                 set_queue_test \
-                 set_serialise_unserialise_test \
-                 set_sort_test \
-                 set_threadpool_test \
-                 set_wkt_test
+check_PROGRAMS = \
+	set_compressor_test \
+	set_forward_list_test \
+	set_generate_terms_test \
+	set_geo_test \
+	set_hash_test \
+	set_htm_test \
+	set_lru_test \
+	set_msgpack_test \
+	set_patcher_test \
+	set_query_test \
+	set_queue_test \
+	set_serialise_unserialise_test \
+	set_sort_test \
+	set_threadpool_test \
+	set_wkt_test
 
 TESTS = $(check_PROGRAMS)
 
-common_files =  $(top_builddir)/src/cartesian.cc \
-                $(top_builddir)/src/database.cc \
-                $(top_builddir)/src/database_autocommit.cc \
-                $(top_builddir)/src/database_utils.cc \
-                $(top_builddir)/src/datetime.cc \
-                $(top_builddir)/src/endpoint.cc \
-                $(top_builddir)/src/exception.cc \
-                $(top_builddir)/src/io_utils.cc \
-                $(top_builddir)/src/fields.cc \
-                $(top_builddir)/src/forward_list.h \
-                $(top_builddir)/src/generate_terms.cc \
-                $(top_builddir)/src/geometry.cc \
-                $(top_builddir)/src/geospatialrange.cc \
-                $(top_builddir)/src/hash/md5.cc \
-                $(top_builddir)/src/hash/sha256.cc \
-                $(top_builddir)/src/htm.cc \
-                $(top_builddir)/src/length.cc \
-                $(top_builddir)/src/log.cc \
-                $(top_builddir)/src/lru.h \
-                $(top_builddir)/src/msgpack.cc \
-                $(top_builddir)/src/msgpack_patcher.cc \
-                $(top_builddir)/src/multivalue.cc \
-                $(top_builddir)/src/multivaluekeymaker.cc \
-                $(top_builddir)/src/multivaluerange.cc \
-                $(top_builddir)/src/namegen.cc \
-                $(top_builddir)/src/queue.h \
-                $(top_builddir)/src/schema.cc \
-                $(top_builddir)/src/serialise.cc \
-                $(top_builddir)/src/threadpool.h \
-                $(top_builddir)/src/times.cc \
-                $(top_builddir)/src/utils.cc \
-                $(top_builddir)/src/wkt_parser.cc
+common_files = \
+	$(top_builddir)/src/cartesian.cc \
+	$(top_builddir)/src/database.cc \
+	$(top_builddir)/src/database_autocommit.cc \
+	$(top_builddir)/src/database_utils.cc \
+	$(top_builddir)/src/datetime.cc \
+	$(top_builddir)/src/endpoint.cc \
+	$(top_builddir)/src/exception.cc \
+	$(top_builddir)/src/io_utils.cc \
+	$(top_builddir)/src/fields.cc \
+	$(top_builddir)/src/forward_list.h \
+	$(top_builddir)/src/generate_terms.cc \
+	$(top_builddir)/src/geometry.cc \
+	$(top_builddir)/src/geospatialrange.cc \
+	$(top_builddir)/src/hash/md5.cc \
+	$(top_builddir)/src/hash/sha256.cc \
+	$(top_builddir)/src/htm.cc \
+	$(top_builddir)/src/length.cc \
+	$(top_builddir)/src/log.cc \
+	$(top_builddir)/src/lru.h \
+	$(top_builddir)/src/lz4/lz4.c \
+	$(top_builddir)/src/lz4_compressor.cc \
+	$(top_builddir)/src/msgpack.cc \
+	$(top_builddir)/src/msgpack_patcher.cc \
+	$(top_builddir)/src/multivalue.cc \
+	$(top_builddir)/src/multivaluekeymaker.cc \
+	$(top_builddir)/src/multivaluerange.cc \
+	$(top_builddir)/src/namegen.cc \
+	$(top_builddir)/src/queue.h \
+	$(top_builddir)/src/schema.cc \
+	$(top_builddir)/src/serialise.cc \
+	$(top_builddir)/src/threadpool.h \
+	$(top_builddir)/src/times.cc \
+	$(top_builddir)/src/utils.cc \
+	$(top_builddir)/src/wkt_parser.cc
 
+
+set_compressor_test_SOURCES = $(common_files) set_compressor_test.cc test_compressor.cc
+set_compressor_test_LDADD = @CHECK_LIBS@
 
 set_forward_list_test_SOURCES = $(common_files) set_forward_list_test.cc test_forward_list.cc
 set_forward_list_test_LDADD = @CHECK_LIBS@
