--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,11 +85,11 @@ message (STATUS "Compile flags: ${CMAKE_CXX_FLAGS}")
 # Xapiand
 ########################################################################
 
-find_program(CCACHE_FOUND "ccache")
-if(CCACHE_FOUND)
+find_program (CCACHE_FOUND "ccache")
+if (CCACHE_FOUND)
 	set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "ccache")
 	set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK "ccache")
-endif(CCACHE_FOUND)
+endif()
 
 
 include (AC_HEADER_STDC)
