Define cluster if the remote protocol is available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,11 @@ check_cxx_source_compiles ("
 	}" HAVE_DATABASE_REVISION_INFO)
 cmake_pop_check_state ()
 
+if (HAVE_REMOTE_PROTOCOL)
+	set ("XAPIAND_CLUSTERING" 1)
+else ()
+	set ("XAPIAND_CLUSTERING" 0)
+endif ()
 
 ########################################################################
 # Configuration
